; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ada-tasks.c_get_self_id.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ada-tasks.c_get_self_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.value = type { i32 }
%struct.task_entry = type { i8* }

@thread_support = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_self_id() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.value*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.task_entry*, align 8
  %6 = load i64, i64* @thread_support, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %20

8:                                                ; preds = %0
  %9 = call i32 (...) @GET_CURRENT_THREAD()
  %10 = call %struct.task_entry* @get_thread_entry_vptr(i32 %9)
  store %struct.task_entry* %10, %struct.task_entry** %5, align 8
  %11 = load %struct.task_entry*, %struct.task_entry** %5, align 8
  %12 = icmp ne %struct.task_entry* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %8
  %14 = load %struct.task_entry*, %struct.task_entry** %5, align 8
  %15 = getelementptr inbounds %struct.task_entry, %struct.task_entry* %14, i32 0, i32 0
  %16 = load i8*, i8** %15, align 8
  br label %18

17:                                               ; preds = %8
  br label %18

18:                                               ; preds = %17, %13
  %19 = phi i8* [ %16, %13 ], [ null, %17 ]
  store i8* %19, i8** %1, align 8
  br label %21

20:                                               ; preds = %0
  store i8* null, i8** %1, align 8
  br label %21

21:                                               ; preds = %20, %18
  %22 = load i8*, i8** %1, align 8
  ret i8* %22
}

declare dso_local %struct.task_entry* @get_thread_entry_vptr(i32) #1

declare dso_local i32 @GET_CURRENT_THREAD(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
